ingress/deploy-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-test
  namespace: default
spec:
  selector:
    app: myapp-test
    release: box
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-test
      release: box
  template:
    metadata:
      labels:
        app: myapp-test
        release: box
    spec:
      containers:
      - name: myapp-test
        image: deploy.bocloud/nginx:latest
        ports:
        - name: httpd
          containerPort: 80
