ingress/deploy-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp-nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp-test-nginx.box.com
    http:
      paths:
      - path:
        backend:
          serviceName: myapp-test
          servicePort: 80
