ingress/deploy-tomcat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp-tomcat
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp-test-tomcat.box.com
    http:
      paths:
      - path:
        backend:
          serviceName: myapp-tomcat
          servicePort: 8080
