ingress/ingress-default-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-default-backend
  namespace: ingress-nginx
spec:
  rules:
  - host: default.backend.com
    http:
      paths:
        - path:
          backend:
            serviceName: default-http-backend
            servicePort: 80
